--- a/Front-end/src/app/components/gerenciar-exercicios/gerenciar-exercicios.component.html
+++ b/Front-end/src/app/components/gerenciar-exercicios/gerenciar-exercicios.component.html
@@ -30,7 +30,7 @@
       </button>
     </div>
 
-    <div *ngIf="treinos.length > 0" class="w-full">
+    <div *ngIf="treinos.length > 0" class="w-full h-[500px] overflow-auto">
       <h3 class="text-xl font-semibold text-gray-700">
         Exercícios cadastrados
       </h3>
