--- a/Front-end/src/app/components/home/home.component.html
+++ b/Front-end/src/app/components/home/home.component.html
@@ -41,7 +41,7 @@
 </div>
 
 <div
-  class="absolute bottom-2 left-2 text-orange-600 font-semibold"
+  class="absolute bottom-2 left-[50%] transform translate-x-[-50%] text-orange-600 font-semibold text-[16px] text-center text-nowrap"
   (click)="abrirLogin()"
   *ngIf="usuario == 'aluno' && loginUsuario"
 >
